--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-    <script type="text/javascript">console.log(milk);</script>  
+    <script type="text/javascript">function testy(){console.log('hello, there!');}</script>  
     </body>
 </html>
