--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
-    <script type="text/javascript">function testy(){console.log('hello, there!');}</script>  
+    <script type="text/javascript">
+        window.test = function (){console.log('hello, there!');};
+    </script>  
     </body>
 </html>
