--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<html>
-    <body>
+
     <script type="text/javascript">
-        window.test = function (){console.log('hello, there!');};
+        console.log('fellas, its been good to know ya');
     </script>  
-    </body>
-</html>
