--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-
-    <script type="text/javascript">
-        console.log('fellas, its been good to know ya');
-    </script>  
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7jTgkTEDDog" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
