--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7jTgkTEDDog" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<script type="text/javascript">console.log(player);</script>
