--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<script type="text/javascript">console.log(player);</script>
+<script type="text/javascript">function shingun() {
+  console.log('ronin');
+  }</script>
