--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<script type="text/javascript">function shingun() {
+<script type="text/javascript">window.shingun = function () {
   console.log('ronin');
   }</script>
