--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<script type="text/javascript">window.shingun = function () {
+<script type="text/javascript">
   console.log('ronin');
-  }</script>
+  </script>
