--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <script type="text/javascript">
-  window.sss = function () { console.log('asd'); }
-  </script>
+  function lord() {
+    console.log('FUCK YOU ALL');
+  }
+</script>
