--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <script type="text/javascript">
-  function lord() {
-    console.log('FUCK YOU ALL');
-  }
+  window.addEventListener('message', function(event) { 
+
+    return 'haha';
+
+}); 
 </script>
