--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   window.addEventListener('message', function(event) { 
 
-    return 'haha';
+    console.log('haha');
 
 }); 
 </script>
