--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
+<div id="ytplayer"></div>
 <script type="text/javascript">
-  window.addEventListener('message', function(event) { 
+var parameters;
+var match,
+    pl     = /\+/g,  // Regex for replacing addition symbol with a space
+    search = /([^&=]+)=?([^&]*)/g,
+    decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
+    query  = window.location.search.substring(1);
 
-    return 'haha';
-
-}); 
+parameters = {};
+while (match = search.exec(query))
+   parameters[decode(match[1])] = decode(match[2]);
+  
+  document.getElementById('ytplayer').innerHTML(`
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/${parameters['id']}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  `);
 </script>
