--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<div id="ytplayer"></div>
 <script type="text/javascript">
-let lord = "me";
+function displayMessage (evt) {
+console.log(evt.origin);
+}
+
+if (window.addEventListener) {
+	// For standards-compliant web browsers
+	window.addEventListener("message", displayMessage, false);
+}
+else {
+	window.attachEvent("onmessage", displayMessage);
+}
 </script>
