--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
 <script type="text/javascript">
-console.log(window.frameElement);
+console.log(window.parent);
+  console.log(player);
 </script>
