--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
 <script type="text/javascript">
-console.log(window.parent);
-  console.log(player);
+window.lord = function () {console.log('asasd');}
 </script>
