--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 
 <script type="text/javascript">
-window.lord = function () {console.log('asasd');}
+  let tag = document.createElement('script');
+
+tag.src = "https://www.youtube.com/player_api";
+let firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+function onYouTubePlayerAPIReady () {
+    player.youtubePlayer.init();
+}
+window.lord = function () {
+return new YT.Player('ytplayer', {videoId: '7jTgkTEDDog',
+                                            width: '427',
+    height: '240',
+    playerVars: {
+      showinfo: 0,
+      controls: 0,
+      disablekb: 1,
+      modestbranding: 1,
+      widget_referrer: 'http://www.youtube.com',
+    }});
+};
 </script>
