--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@ function onYouTubePlayerAPIReady () {
     player.youtubePlayer.init();
 }
 window.lord = function () {
-return new YT.Player('ytplayer', {videoId: '7jTgkTEDDog',
-                                            width: '427',
-    height: '240',
-    playerVars: {
-      showinfo: 0,
-      controls: 0,
-      disablekb: 1,
-      modestbranding: 1,
-      widget_referrer: 'http://www.youtube.com',
-    }});
+return new YT.Player();
 };
 </script>
