--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<div id="ytplayer"></div>
+<html>
+<body>
+  <div id="ytplayer"></div>
 <script type="text/javascript">
   let tag = document.createElement('script');
 
@@ -13,3 +15,5 @@ return new YT.Player('ytplayer');
 }
 
 </script>
+</body>
+</html>
