--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ let firstScriptTag = document.getElementsByTagName('script')[0];
 firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
 function onYouTubePlayerAPIReady () {
-    window.lord = function () {
-return new YT.Player('ytplayer');
+    window.lord = function (callback) {
+  callback();
 };
 }
 
