--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@ firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 let onReady;
 function onYouTubePlayerAPIReady () {
  window.onPlayerReady = function (callback) {
-    callback(new YT.Player('ytplayer');
+    callback(new YT.Player('ytplayer'));
 };
 }
-
-
 </script>
 </body>
 </html>
