--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
  window.addEventListener('message',function(event) {
     origin = event;
-},false);
+});
 let tag = document.createElement('script');
 
 tag.src = "https://www.youtube.com/player_api";
@@ -12,10 +12,10 @@ let firstScriptTag = document.getElementsByTagName('script')[0];
 firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 let origin;
 function onYouTubePlayerAPIReady () {
- window.getInstance = function () {return new YT.Player('ytplayer');};
+ 
     origin.source.postMessage('getit',origin.origin);
 }
- 
+ window.getYTPlayerInstance = function () {return new YT.Player('ytplayer');};
  
 
  
