--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
 function onYouTubePlayerAPIReady () {
     window.getYoutubePlayerInstance = function () {
-        console.log(new YT.Player('ytplayer'));
+        let nytp = new YT.Player('ytplayer');
+        return nytp;
     }
 }
 </script>
