--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<div id="ytplayer"></div>
+<div id="ytplayerWrapper" style="display:none;">
+    <div id="ytplayer"></div>
+</div>
 <script type="text/javascript">
 let tag = document.createElement('script');
 
